--- a/ReadMe
+++ b/ReadMe
@@ -3,12 +3,13 @@ This is a sample of the Node.js webscrapper that powers my fantasy sports game, 
 It consists of 3  Firebase Cloud Functions:
 
 First, getSchedule makes a request to CBS sports and scrapes schedule data for upcoming NBA games.
+It then writes the data to my Firebase database. 
 
 Second, getPlayers reads the schedule data from Firebase and makes a new http request to the 
 TEAM page of every team with upcoming game. This results in only getting info for players with upcoming games.
 
-Third, for every player with an upcoming game, I make an additional request to that players 
-individual page to get the players photo url, and previous game logs. 
+Third, for every player with an upcoming game, I make an additional request to that player's 
+individual page to get the player's photo url, and previous game logs. 
 
 My full codebase for the app includes around 20-25 cloud functions, with various tasks like managing contests,
 importing real time stats, and calculating scores. 
