--- a/ReadMe
+++ b/ReadMe
@@ -6,7 +6,7 @@ another for getting additional player logs and info.
 
 My full codebase for the app includes around 25 functions deployed to Google Cloud Platform, as well as a 
 robust Firestore databse and a native iOS cient app, which you can play durring the NBA season at https://www.darkhorse-dfs.app. 
-(Download through testflight)
+(available through testflight)
 
 This sample code shows my clean handling of making multiple nested https requests with promises, 
 promis.all(). async/await, and the javascript map and reduce functions. 
