--- a/ReadMe
+++ b/ReadMe
@@ -11,9 +11,7 @@ robust Firestore databse and a native iOS cient app, which you can play durring 
 This sample code shows my clean handling of making multiple nested https requests with promises, 
 promis.all(). async/await, and the javascript map and reduce functions. 
 
-
-
-
+![image](https://user-images.githubusercontent.com/8163492/89725634-4b66c600-d9c6-11ea-915b-603c02834d74.png)
 
 
 
