--- a/ReadMe
+++ b/ReadMe
@@ -11,8 +11,6 @@ robust Firestore databse and a native iOS cient app, which you can play durring 
 This sample code shows my clean handling of making multiple nested https requests with promises, 
 promis.all(). async/await, and the javascript map and reduce functions. 
 
-![image](https://user-images.githubusercontent.com/8163492/89725634-4b66c600-d9c6-11ea-915b-603c02834d74.png)
-
-
+![darkhorse](https://user-images.githubusercontent.com/8163492/89725644-6c2f1b80-d9c6-11ea-8f88-4e9abfaf3bcc.png)
 
 
