--- a/ReadMe
+++ b/ReadMe
@@ -1,15 +1,15 @@
 #Darkhorse https://www.darkhorse-dfs.app
 
-This is a sample of the Node.js webscrapper that powers my fantasy sports game, Darkhorse.
-
-It consists of 3 Google Cloud Functions which import data into a Firebase DB: one for getting the currently schedule NBA games from cbssports.com, another for using the schedule to get the active players, and then another for getting additional player logs and info. 
-
-My full codebase for the app includes around 25 functions deployed to Google Cloud Platform, as well as a 
-robust Firestore databse and a native iOS cient app.
+This is a sample of the Google Cloud Functions that power my fantasy sports game, Darkhorse.
 
 This sample code shows my clean handling of making multiple nested https requests with promises, 
 promise.all(). async/await, and the javascript map and reduce functions. 
 
-![darkhorse](https://user-images.githubusercontent.com/8163492/89725644-6c2f1b80-d9c6-11ea-8f88-4e9abfaf3bcc.png)
+
+
+
+
+
+
 
 
